chore: Update warning color in tailwind.config.js
The warning color in the tailwind.config.js file has been updated to #F8E7A0 for better visibility and consistency.

--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -128,6 +128,9 @@
               @apply pb-2 inline-block;
             }
             #periodosContainer {
+              .palert{
+                @apply alert alert-warning leading-none mb-4;
+              }
               @apply ml-7 pl-5 border-l border-azul-light;
               label {
                 @apply w-16;
