--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -1,7 +1,40 @@
 <section id="home_banners" class="as__section as__banner">
   <div class="as__banner_wrapper">
     <div class="as__banner_wrapper_int">
+
       <div class="banner banner_1 active">
+        <div class="as__banner_content">
+          <h1>
+            <span class="ban_anim1 text-4xl md:text-4xl" >Conoce el comunicado  <br /> de ASULADO <span class="inline-block text-azul-40">Sobre el anuncio</span><span class="inline-block" style="color: #2752b0"> realizado por  <span class="inline-block rounded-full bg-azul-bright2 p-7">EPS SURA</span></span>  
+            </span>
+          </h1>
+          <div>
+           
+            
+
+            <button href="/comunicado_1" onclick="startChat()" class="as__button self-start">
+              <span>CLIC AQUÍ</span>
+              <i
+                role="presentation"
+                class="fa-light fa-arrow-right"
+                aria-hidden="true"
+              ></i>
+            </button> 
+          </div>
+        </div>
+        <div class="as__banner_images">
+        <!--<img src="/assets/images/banner_2_bg.webp" alt="Asulado" />-->
+          <img
+            src="/assets/images/img_comunucados.webp"
+            class="max-w-[800px]"
+            alt="Asulado"
+          />
+        </div>
+        <div class="as__banner_piso"></div>
+      </div>
+
+
+      <div class="banner banner_1">
         <div class="as__banner_content">
           <h1>
             <span class="ban_anim1" style="font-size: 24px; line-height: 24px; font-weight: 600;">¡Ahora con Lusa puedes gestionar tu <br /><span style="color: #2752b0">Certificado de Ingresos y Retenciones!</span>
