style: Update banner content width for larger screens

--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -1,29 +1,37 @@
 <section id="home_banners" class="as__section as__banner">
   <div class="as__banner_wrapper">
     <div class="as__banner_wrapper_int">
-
       <div class="banner banner_1 active">
-        <div class="as__banner_content">
-          <h1>
-            <span class="ban_anim1 text-4xl md:text-4xl" >Conoce el comunicado  <br /> de ASULADO <span class="inline-block text-azul-40">Sobre el anuncio</span><span class="inline-block" style="color: #2752b0"> realizado por  <span class="inline-block rounded-full bg-azul-bright2 p-7">EPS SURA</span></span>  
+        <div class="as__banner_content full">
+          <h1 class="!leading-none">
+            <span class="!inline w-auto ban_anim1 !text-azul-norm text-2xl md:text-[2.6rem]"
+              >Conoce el comunicado <br />
+              de ASULADO
             </span>
+            <span class="!inline w-auto !text-azul-bold text-2xl md:text-4xl"
+              >Sobre el anuncio realizado por
+            </span>
+            <span class="!inline-block w-auto rounded-full bg-alpha-30 py-1 leading-none px-4 text-2xl md:text-4xl"
+              >EPS SURA</span
+            >
           </h1>
-          <div>
-           
-            
-
-            <button href="/comunicado_1" onclick="startChat()" class="as__button self-start">
-              <span>CLIC AQUÍ</span>
+          <div class="!ml-0">
+            <a
+              href="/comunicado_1"
+              onclick="startChat()"
+              class="as__button self-start "
+            >
+              <span class="!text-2xl">CLIC AQUÍ</span>
               <i
                 role="presentation"
-                class="fa-light fa-arrow-right"
+                class="fa-light fa-arrow-right !text-2xl"
                 aria-hidden="true"
               ></i>
-            </button> 
+            </a>
           </div>
         </div>
         <div class="as__banner_images">
-        <!--<img src="/assets/images/banner_2_bg.webp" alt="Asulado" />-->
+          <!--<img src="/assets/images/banner_2_bg.webp" alt="Asulado" />-->
           <img
             src="/assets/images/img_comunucados.webp"
             class="max-w-[800px]"
@@ -33,22 +41,29 @@
         <div class="as__banner_piso"></div>
       </div>
 
-
       <div class="banner banner_1">
         <div class="as__banner_content">
           <h1>
-            <span class="ban_anim1" style="font-size: 24px; line-height: 24px; font-weight: 600;">¡Ahora con Lusa puedes gestionar tu <br /><span style="color: #2752b0">Certificado de Ingresos y Retenciones!</span>
+            <span
+              class="ban_anim1"
+              style="font-size: 24px; line-height: 24px; font-weight: 600"
+              >¡Ahora con Lusa puedes gestionar tu <br /><span
+                style="color: #2752b0"
+                >Certificado de Ingresos y Retenciones!</span
+              >
             </span>
           </h1>
           <div>
-            <p class="ban_anim1" >
-              Recuerda que también puedes solicitar: colilla de pago, certificado de pensión y copia de la póliza.
+            <p class="ban_anim1">
+              Recuerda que también puedes solicitar: colilla de pago,
+              certificado de pensión y copia de la póliza.
             </p>
             <p class="dest ban_anim1">
-              <b>¡Escríbele a Lusa y recibe la información de forma fácil y rápida!
+              <b
+                >¡Escríbele a Lusa y recibe la información de forma fácil y
+                rápida!
               </b>
             </p>
-            
 
             <!-- <button onclick="startChat()" class="as__button self-start">
               <span>¡Escríbeme!</span>
@@ -61,7 +76,7 @@
           </div>
         </div>
         <div class="as__banner_images">
-        <!--<img src="/assets/images/banner_2_bg.webp" alt="Asulado" />-->
+          <!--<img src="/assets/images/banner_2_bg.webp" alt="Asulado" />-->
           <img
             src="/assets/images/lusa_banner.webp"
             class="max-w-[800px]"
@@ -76,7 +91,9 @@
           <h1>
             <span class="ban_anim1">Bienvenido a</span>
             <b class="ban_anim1">ASULADO</b>
-            <strong class="ban_anim1">tu aliado en beneficios garantizados</strong>
+            <strong class="ban_anim1"
+              >tu aliado en beneficios garantizados</strong
+            >
           </h1>
         </div>
         <div class="as__banner_piso"></div>
