--- a/src/css/app.css
+++ b/src/css/app.css
@@ -525,7 +525,9 @@ body {
 
           .as__banner_content {
             @apply z-10 col-span-6 col-start-1 row-span-2 row-start-1 mx-auto flex w-full flex-col items-center justify-center text-center sm:col-span-4 sm:col-start-2 sm:row-span-2 sm:row-start-2 md:col-span-2 md:col-start-3 md:row-span-4 md:row-start-1;
-
+            &.full {
+              @apply md:col-span-4;
+            }
             h1 {
               @apply my-auto flex w-full flex-col gap-y-4 px-4 text-center font-je font-bold opacity-0 sm:mb-20 sm:mt-auto md:px-0;
               span {
@@ -588,6 +590,9 @@ body {
 
           .as__banner_content {
             @apply z-20 col-start-2 col-span-6 row-start-4 row-span-3 md:col-start-5 md:col-end-8 md:row-start-2 md:row-end-6 self-center flex flex-col gap-8;
+            &.full {
+              @apply md:col-end-9;
+            }
             h1 {
               @apply relative mx-auto pr-12 font-je text-5xl leading-[0.8em] md:mx-0 md:pr-0;
               span {
