--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -4,12 +4,12 @@
       <div class="banner banner_1 active">
         <div class="as__banner_content full">
           <h1 class="!leading-none">
-            <span class="!inline w-auto ban_anim1 !text-azul-norm text-2xl md:text-[2.6rem]"
+            <span class="!inline w-auto ban_anim1 !text-azul-norm text-2xl md:text-4xl"
               >Conoce el comunicado <br />
               de ASULADO
             </span>
-            <span class="!inline w-auto !text-azul-bold text-2xl md:text-4xl"
-              >Sobre el anuncio realizado por
+            <span class="!inline w-auto !text-azul-norm text-2xl md:text-4xl"
+              >sobre el anuncio realizado por
             </span>
             <span class="!inline-block w-auto rounded-full bg-alpha-30 py-1 leading-none px-4 text-2xl md:text-4xl"
               >EPS SURA</span
@@ -33,7 +33,7 @@
         <div class="as__banner_images">
           <!--<img src="/assets/images/banner_2_bg.webp" alt="Asulado" />-->
           <img
-            src="/assets/images/img_comunucados.webp"
+            src="/assets/images/img_sup_banner.webp"
             class="max-w-[800px]"
             alt="Asulado"
           />
