--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -9,7 +9,7 @@
               de ASULADO
             </span>
             <span class="!inline w-auto !text-azul-norm text-2xl md:text-4xl"
-              >sobre el anuncio realizado por
+              >sobre el anuncio<br> realizado por
             </span>
             <span class="!inline-block w-auto rounded-full bg-alpha-30 py-1 leading-none px-4 text-2xl md:text-4xl"
               >EPS SURA</span
