--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -5,6 +5,91 @@
   <section class="as__section">
     <div class="as__section_wrapper md:!px-0">
       <div class="as__section_content_full">
+
+
+        <div class="pl-10 py-6">
+          <h3 class="!text-azul-bright !text-3xl">
+            Medellín, 6 de junio de 2024
+          </h3>
+        </div>
+
+        <div
+          class="w-full mx-auto flex flex-col gap-y-0 lg:flex-row-reverse md:justify-between md:items-stretch"
+        >
+          <div
+            class="bg-[#08c0fd] w-full lg:w-1/2 flex flex-col justify-center items-start pt-8 bg-[url(/assets/images/GC/bg_1.svg)] bg-center bg-contain bg-no-repeat"
+          >
+            <div class="w-full mx-auto lg:w-2/3 xl:w-1/2">
+              <img
+                class="lg:max-w-full mx-auto max-w-sm !w-full"
+                src="/assets/images/ico_comunicado_6_junio.webp"
+                alt=""
+              />
+            </div>
+
+            <div class="mx-auto w-2/3 xl:w-1/2 py-8">
+              <h4
+                class="z-20 text-2xl md:text-5xl text-azul-norm font-je font-semibold"
+              >
+                Información <br class="md:block hidden" />
+                para los <br class="md:block hidden" />
+                <span
+                  class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1"
+                >
+                  accionistas</span
+                >
+              </h4>
+            </div>
+          </div>
+
+          <div
+            class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 py-16 lg:text-right bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat"
+          >
+            <div class="">
+              <h3 class="!text-azul-80 my-10">
+                Sr. Accionista Asulado Seguros de Vida S.A.<br />
+             
+              </h3>
+
+              <p class="!text-azul-80 my-5">
+                <b>Asunto:</b> Convocatoria a reunión extraordinaria de la Asamblea de Accionistas.
+              </p>
+              <p class="!text-azul-80 my-5">
+                Patricia Restrepo Gutiérrez, actuando en mi calidad de presidenta de Asulado Seguros de Vida S.A. (la “Sociedad”), de conformidad con lo dispuesto en el artículo 423 del Código de Comercio y los artículos 19 y siguientes de los Estatutos Sociales de la Sociedad, me permito convocarlo a la reunión extraordinaria de la Asamblea General de Accionistas de la Sociedad, que se celebrará el día 14 de junio del presente año, a las 9:00 a.m., en la Cra. 43ª No. 3 - 101 piso 6 de la ciudad de Medellín, en la que se someterá a consideración de la Asamblea el siguiente orden del día:
+              </p>
+         
+
+              <ul class="!text-azul-80 pl-8">
+                <li>1. Verificación del quórum.</li>
+                <li>2. Lectura y aprobación del orden del día.</li>
+                <li> 3. Nombramiento del Presidente y del Secretario de la reunión.</li>
+                <li>4. Autorización de capitalización y delegación en la Junta Directiva para la aprobación del reglamento de suscripción de acciones.</li>
+                <li> 5. Lectura y aprobación del acta.</li>
+                <li> 6. Levantamiento de la sesión.</li>
+              </ul>
+
+              <p class="!text-azul-80 my-5">
+                Se informa que quienes no puedan asistir personalmente pueden hacerse representar por medio de apoderado, de conformidad con lo establecido en la Ley y en los Estatutos Sociales.
+Cordialmente,
+              </p>
+            
+          
+
+              <h3 class="!text-azul-80 mt-5">Patricia Restrepo Gutiérrez</h3>
+              <p class="!text-azul-80">
+                Presidenta<br />
+                Asulado Seguros de Vida S.A
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="divider"></div>
+
+
+
+
         <div class="mt-6 pl-10 py-6">
           <h3 class="!text-azul-bright !text-3xl">
             Medellín, 27 de mayo de 2024
