--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -72,13 +72,11 @@
                 Se informa que quienes no puedan asistir personalmente pueden hacerse representar por medio de apoderado, de conformidad con lo establecido en la Ley y en los Estatutos Sociales.
 Cordialmente,
               </p>
-            
-          
 
+              <p style="display: flow-root;"><img src="/assets/images/firma_patricia.jpg" alt="" style="float: right;mix-blend-mode: darken;display: block;width: 82px;height: 53px;"></p>
               <h3 class="!text-azul-80 mt-5">Patricia Restrepo Gutiérrez</h3>
               <p class="!text-azul-80">
-                Presidenta<br />
-                Asulado Seguros de Vida S.A
+                Presidenta Asulado Seguros de Vida S.A
               </p>
             </div>
           </div>
