--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -60,17 +60,20 @@
          
 
               <ul class="!text-azul-80 pl-8">
-                <li>1. Verificación del quórum.</li>
-                <li>2. Lectura y aprobación del orden del día.</li>
-                <li> 3. Nombramiento del Presidente y del Secretario de la reunión.</li>
-                <li>4. Autorización de capitalización y delegación en la Junta Directiva para la aprobación del reglamento de suscripción de acciones.</li>
-                <li> 5. Lectura y aprobación del acta.</li>
-                <li> 6. Levantamiento de la sesión.</li>
+                <li><b>1.</b> Verificación del quórum.</li>
+                <li><b>2.</b> Lectura y aprobación del orden del día.</li>
+                <li> <b>3.</b> Nombramiento del Presidente y del Secretario de la reunión.</li>
+                <li><b>4.</b> Autorización de capitalización y delegación en la Junta Directiva para la aprobación del reglamento de suscripción de acciones.</li>
+                <li><b>5.</b>  Lectura y aprobación del acta.</li>
+                <li><b>6.</b>  Levantamiento de la sesión.</li>
               </ul>
 
               <p class="!text-azul-80 my-5">
                 Se informa que quienes no puedan asistir personalmente pueden hacerse representar por medio de apoderado, de conformidad con lo establecido en la Ley y en los Estatutos Sociales.
-Cordialmente,
+
+              </p>
+              <p class="!text-azul-80 my-5">
+                Cordialmente
               </p>
 
               <p style="display: flow-root;"><img src="/assets/images/firma_patricia.jpg" alt="" style="float: right;mix-blend-mode: darken;display: block;width: 82px;height: 53px;"></p>
