--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -51,9 +51,12 @@
              
               </h3>
 
-              <p class="!text-azul-80 my-5">
-                <b>Asunto:</b> Convocatoria a reunión extraordinaria de la Asamblea de Accionistas.
-              </p>
+              <h3 class="!text-azul-80 my-5">
+                Asunto
+              </h3>
+              <h3 class="!text-azul-bright !text-3xl">
+                Convocatoria a reunión extraordinaria de la Asamblea de Accionistas.
+             </h3>
               <p class="!text-azul-80 my-5">
                 Patricia Restrepo Gutiérrez, actuando en mi calidad de presidenta de Asulado Seguros de Vida S.A. (la “Sociedad”), de conformidad con lo dispuesto en el artículo 423 del Código de Comercio y los artículos 19 y siguientes de los Estatutos Sociales de la Sociedad, me permito convocarlo a la reunión extraordinaria de la Asamblea General de Accionistas de la Sociedad, que se celebrará el día 14 de junio del presente año, a las 9:00 a.m., en la Cra. 43ª No. 3 - 101 piso 6 de la ciudad de Medellín, en la que se someterá a consideración de la Asamblea el siguiente orden del día:
               </p>
@@ -62,10 +65,10 @@
               <ul class="!text-azul-80 pl-8">
                 <li><b>1.</b> Verificación del quórum.</li>
                 <li><b>2.</b> Lectura y aprobación del orden del día.</li>
-                <li> <b>3.</b> Nombramiento del Presidente y del Secretario de la reunión.</li>
+                <li><b>3.</b> Nombramiento del Presidente y del Secretario de la reunión.</li>
                 <li><b>4.</b> Autorización de capitalización y delegación en la Junta Directiva para la aprobación del reglamento de suscripción de acciones.</li>
-                <li><b>5.</b>  Lectura y aprobación del acta.</li>
-                <li><b>6.</b>  Levantamiento de la sesión.</li>
+                <li><b>5.</b> Lectura y aprobación del acta.</li>
+                <li><b>6.</b> Levantamiento de la sesión.</li>
               </ul>
 
               <p class="!text-azul-80 my-5">
