--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -43,7 +43,7 @@
           </div>
 
           <div
-            class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 py-16 lg:text-right bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat"
+            class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 py-16 lg:text-justify bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat"
           >
             <div class="">
               <h3 class="!text-azul-80 my-10">
@@ -51,9 +51,7 @@
              
               </h3>
 
-              <h3 class="!text-azul-80 my-5">
-                Asunto
-              </h3>
+            
               <h3 class="!text-azul-bright !text-3xl">
                 Convocatoria a reunión extraordinaria de la Asamblea de Accionistas.
              </h3>
@@ -79,7 +77,7 @@
                 Cordialmente
               </p>
 
-              <p style="display: flow-root;"><img src="/assets/images/firma_patricia.jpg" alt="" style="float: right;mix-blend-mode: darken;display: block;width: 82px;height: 53px;"></p>
+              <p style="display: flow-root;"><img src="/assets/images/firma_patricia.jpg" alt="" style="mix-blend-mode: darken;display: block;width: 82px;height: 53px;"></p>
               <h3 class="!text-azul-80 mt-5">Patricia Restrepo Gutiérrez</h3>
               <p class="!text-azul-80">
                 Presidenta Asulado Seguros de Vida S.A
@@ -130,7 +128,7 @@
           </div>
 
           <div
-            class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 py-16 bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat"
+            class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 lg:text-justify py-16 bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat"
           >
             <div class="">
               <h3 class="!text-azul-80 my-10">
@@ -236,7 +234,7 @@
           </div>
 
           <div
-            class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 py-16 lg:text-right bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat"
+            class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 py-16 lg:text-justify bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat"
           >
             <div class="">
               <h3 class="!text-azul-80 my-10">
