--- a/src/partials/gobierno/2_pol_corp.html
+++ b/src/partials/gobierno/2_pol_corp.html
@@ -46,7 +46,7 @@
       </li>
       <li class="as__desc_item">
         <a
-          href="/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf"
+          href="/assets/documentos/SGC-PO10_Estatutos_Asulado_v3.pdf"
           target="_blank"
           class="dest"
           aria-current="page"
@@ -91,7 +91,7 @@
       </li>
       <li class="as__desc_item">
         <a
-          href="/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf"
+          href="/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensación_v3_junio.pdf"
           target="_blank"
           class="dest"
           aria-current="page"
@@ -105,13 +105,13 @@
       </li>
       <li class="as__desc_item">
         <a
-          href="/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf"
+          href="/assets/documentos/SGC-PO03_Reglamento_Comite_de_Riesgos_v4.pdf"
           target="_blank"
           class="dest"
           aria-current="page"
         >
           <div>
-            <b>Reglamento comité de riesgos e inversiones</b>
+            <b>Reglamento comité de riesgos</b>
             <span> PDF 234 kb </span>
           </div>
           <i class="itc fa-light fa-cloud-arrow-down"></i>
@@ -119,7 +119,7 @@
       </li>
       <li class="as__desc_item">
         <a
-          href="/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf"
+          href="/assets/documentos/SGC-PO04_Reglamento_Comite_de_Auditoria_v4.pdf"
           target="_blank"
           class="dest"
           aria-current="page"
