--- a/src/partials/gobierno/2_pol_corp.html
+++ b/src/partials/gobierno/2_pol_corp.html
@@ -91,7 +91,7 @@
       </li>
       <li class="as__desc_item">
         <a
-          href="/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensación_v3_junio.pdf"
+          href="/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3_junio.pdf"
           target="_blank"
           class="dest"
           aria-current="page"
