--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -92,7 +92,7 @@
 
 
 
-        <div class="pl-10 py-6">
+      <!--  <div class="pl-10 py-6">
           <h3 class="!text-azul-bright !text-3xl">
             Medellín, 22 de mayo de 2024
           </h3>
@@ -204,7 +204,7 @@
         </div>
       </div>
 
-       <!-- <div
+        <div
           class="w-full mx-auto flex flex-col gap-y-0 lg:flex-row md:justify-between md:items-stretch"
         >
           <div
@@ -305,7 +305,7 @@
 
       
 
-        <div class="divider"></div>
+    
 
        
 
