Update CSS styles for form layout and table formatting

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1864,6 +1864,10 @@ body {
               @apply file-input file-input-primary file-input-bordered w-full file-input-sm;
             }
           }
+          
+        }
+        input[id="pg:fm:pb:pbs:file:files"] {
+          @apply file-input file-input-primary file-input-bordered w-full file-input-sm;
         }
         .brandSecondaryBrd {
           table {
