--- a/src/partials/PORTAL/4_novedades/4_2_3.html
+++ b/src/partials/PORTAL/4_novedades/4_2_3.html
@@ -1,4 +1,4 @@
-<form
+<!-- <form
   id="pg:fm"
   name="pg:fm"
   method="post"
@@ -641,7 +641,7 @@
   </div>
   <div id="pg:fm:j_id32"></div>
 </form>
-<div class="divider">02</div>
+<div class="divider">02</div> -->
 <form
   xmlns="http://www.w3.org/1999/xhtml"
   id="pg:fm"
@@ -665,8 +665,8 @@
       language: "en_US",
       locale: "es_CO",
       dateTimeFormat: "d/MM/yyyy, h:mm a",
-      labelLastModified: "1718803742000",
-      today: "19/06/2024, 1:49 PM",
+      labelLastModified: "1718874397000",
+      today: "20/06/2024, 9:46 AM",
       userPreferences: [
         { index: 112, name: "HideInlineEditSplash", value: false },
         { index: 114, name: "OverrideTaskSendNotification", value: false },
@@ -1127,7 +1127,12 @@
               </div>
             </div></span
           ></span
-        >
+        ><input
+          id="pg:fm:pb:disabledValue"
+          type="hidden"
+          name="pg:fm:pb:disabledValue"
+          value="false"
+        />
       </div>
       <div class="pbBottomButtons">
         <table border="0" cellpadding="0" cellspacing="0">
