Refactor form button selection logic in portal.js

--- a/src/partials/PORTAL/4_novedades/4_1_1.html
+++ b/src/partials/PORTAL/4_novedades/4_1_1.html
@@ -243,7 +243,7 @@
   </div>
   <div id="pg:fm:j_id39"></div>
 </form>
-<div class="divider">Validación</div>
+<!-- <div class="divider">Validación</div>
 <form
   id="pg:fm"
   name="pg:fm"
@@ -541,4 +541,4 @@
     </div>
   </div>
   <div id="pg:fm:j_id39"></div>
-</form>
+</form> -->
