--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -6,6 +6,139 @@
     <div class="as__section_wrapper md:!px-0">
       <div class="as__section_content_full">
 
+        <div class="pl-10 py-6">
+          <h3 class="!text-azul-bright !text-3xl">
+            Medellín, 21 de junio de 2024
+          </h3>
+        </div>
+
+        <div
+        class="w-full mx-auto flex flex-col gap-y-0 lg:flex-row md:justify-between md:items-stretch"
+      >
+        <div
+            class="bg-[#0f3c84] w-full lg:w-1/2 flex flex-col justify-center items-start pt-8 bg-[url(/assets/images/GC/bg_1.svg)] bg-center bg-contain bg-no-repeat"
+          >
+          <div class="w-full mx-auto lg:w-2/3 xl:w-1/2">
+            <img
+            class="lg:max-w-full mx-auto max-w-sm !w-full"
+            src="/assets/images/img_carta.webp"
+            alt=""
+          />
+          </div>
+
+          <div class="mx-auto w-2/3 xl:w-1/2 py-8">
+            <h4
+              class="z-20 text-2xl md:text-5xl text-white font-je font-semibold"
+            >
+              Información <br class="md:block hidden" />
+              para los <br class="md:block hidden" />
+              <span
+                class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1"
+              >
+                accionistas</span
+              >
+            </h4>
+          </div>
+        </div>
+
+        <div
+          class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 lg:text-justify py-16 bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat"
+        >
+        <div class="">
+          <h3 class="!text-azul-80 my-10">
+            Sr. Accionista Asulado Seguros de Vida S.A.<br />
+            Vía correo electrónico
+          </h3>
+
+          <p class="!text-azul-80 my-5">
+            <b>Referencia:</b> aviso derecho de preferencia
+          </p>
+          <p class="!text-azul-80 my-5">
+            De acuerdo con lo definido por la Asamblea General de Accionistas el día 14 de junio del presente año, y Asulado Seguros de Vida S.A. (en adelante la “Sociedad”), de conformidad con el artículo 12 de sus estatutos, sobre negociabilidad y derecho de preferencia, y el reglamento de suscripción de acciones expedido por la Junta directiva de Asulado, le informa que, se ha autorizado la capitalización de la compañía, mediante la suscripción de 3.067.362 acciones ordinarias y nominativas, por valor de $33.253,3273585595 pesos cada una, la cuales se ofrecen a los accionistas de la sociedad, de acuerdo al derecho de preferencia, y siguiendo los reglamento emitido por la junta:
+          </p>
+
+          <h4 class="text-center !text-azul-80 my-5"><b><i>"REGLAMENTO DE SUSCRIPCIÓN PRIVADA DE ACCIONES
+            ASULADO SEGUROS DE VIDA S.A."</i></b></h4>
+
+            <p class="!text-azul-80 my-5"><b>PRIMERO.</b> Ofrecer, para ser colocadas con sujeción al derecho de preferencia, 3.067.362 acciones ordinarias de Asulado (en adelante, las “Acciones Ofrecidas”) tomadas de las acciones en reserva, en los términos previstos en el presente reglamento (en adelante, el “Reglamento”).
+              </p>
+              <p class="!text-azul-80 my-5"><b>SEGUNDO.</b> Como quiera que la Oferta ha de respetar el derecho de preferencia previsto en el artículo doceavo de los estatutos de Asulado, serán destinatarios de ella los accionistas que se encuentren inscritos como tales en el libro de accionistas de Asulado en la fecha en que se apruebe el presente Reglamento por parte de la Junta Directiva de Asulado (en adelante, los “Accionistas Actuales”), así como los cesionarios de dichos accionistas que adquieran de estos sus derechos de suscripción preferencial conforme al numeral CUARTO de este Reglamento.</p>
+              <p class="!text-azul-80 my-5">
+                <b>TERCERO.</b> Los Accionistas Actuales tendrán derecho a suscribir preferencialmente las Acciones Ofrecidas en una cantidad proporcional a la que poseen en la fecha en que se aprueba el presente Reglamento por parte de la Junta Directiva de Asulado. La proporción en la que los Accionistas Actuales tienen derecho a suscribir las Acciones Ofrecidas es la que resulta de dividir (i) el número de Acciones Ofrecidas entre (ii) el número de acciones ordinarias en circulación de Asulado en la fecha en que se pruebe el Reglamento (en adelante, la “Proporción”). Por lo tanto, cada uno de los Accionistas Actuales tendrá derecho a suscribir preferencialmente el número de acciones que resulte de multiplicar la Proporción por el número de acciones de las que sea titular en la fecha en que se apruebe el Reglamento, aproximado al número entero inferior (en adelante, los “Derechos de Suscripción Preferencial”).
+Así mismo, los accionistas participes podrán ofertar un número mayor a la proporción de la participación accionaria que posean en la sociedad, los cuales serán asignados de forma proporcional de acuerdo con la proporción de acciones que no sean asignadas a los accionistas no interesados
+              </p>
+
+              <p class="!text-azul-80 my-5">Las Acciones Ofrecidas que no fueren suscritas por los Accionistas Actuales en ejercicio de sus Derechos de Suscripción Preferencial, volverán a la reserva y quedarán a disposición de la Junta Directiva de Asulado para su posterior colocación. </p>
+              <p class="!text-azul-80 my-5">
+                <b>CUARTO.</b> Los interesados podrán ejercer el derecho de preferencia dentro de los 15 días hábiles siguientes a la publicación de la oferta, la cual se realizará a través de la página web de la Compañía y mediante correo electrónico dirigido a los accionistas.
+              </p>
+
+              <p class="!text-azul-80 my-5">
+                <b>QUINTO.</b> 
+                 El precio de cada una de las Acciones Ofrecidas será $33.253,3273585595 (en adelante, el “Precio”), del cual $700,002818185851 corresponden al valor nominal de la acción, y $32.553,32454037365 a la prima en colocación de acciones.
+                </p>
+                <p class="!text-azul-80 my-5">
+                En el evento que el valor de las acciones que se adjudiquen a cada accionista sea un valor con decimales, el valor a pagar se aproximará al número entero siguiente.
+              </p>
+
+              <p class="!text-azul-80 my-5"><b>SEXTO.</b> La Oferta será comunicada a los Accionistas Actuales dentro de los tres (3) días hábiles siguientes a la aprobación del reglamento de suscripción de accione
+
+              </p>
+              <p class="!text-azul-80 my-5"><b>SÉPTIMO.</b> Los Accionistas Actuales podrán aceptar la oferta de suscripción de acciones bien sea de acuerdo con su equivalente en acciones, o por un número mayor, mediante correo electrónico dirigido a la Secretaría General de la Sociedad, al correo secretariageneral@asulado.com.co
+
+              </p>
+              <p class="!text-azul-80 my-5"><b>OCTAVO.</b> La adjudicación solo se efectuará una vez surtidas las aprobaciones regulatorias correspondientes a Asulado y de cada accionista participe que así lo requiera y será comunicada a los Accionistas Actuales que acepten la Oferta mediante correo electrónico remitido a la dirección indicada en el formato de aceptación. Sin perjuicio de lo dispuesto en los numerales DÉCIMO y DÉCIMO PRIMERO de este Reglamento, al día hábil siguiente a la remisión de la adjudicación se entenderán suscritas las Acciones Ofrecidas en la cantidad que corresponda y deberá procederse al pago de las mismas.
+
+              </p>
+              <p class="!text-azul-80 my-5"><b>NOVENO.</b> Sin perjuicio de lo dispuesto en numeral OCTAVO, la fecha máxima de adjudicación y pago de las acciones suscritas en el presente reglamento, será el 31 de diciembre del presente año. En caso de no haber sido adjudicadas y/o pagadas para esta fecha volverán a la reserva y quedarán a disposición para futuras capitalizaciones.
+
+              </p>
+              <p class="!text-azul-80 my-5"><b>DÉCIMO.</b> El pago total del Precio se hará en dinero al día hábil siguiente a la comunicación de la adjudicación mediante transferencia bancaria a la cuenta de Asulado y, que para tal efecto se indique al accionista aceptante. No obstante lo anterior, Asulado podrá disponer una fecha distinta para la suscripción y el pago de las acciones. La mora en el pago del Precio causará intereses moratorios a la tasa máxima permitida por la Ley.
+
+              </p>
+              <p class="!text-azul-80 my-5"><b>DÉCIMO PRIMERO.</b> Los accionistas que así lo requieran deberán obtener de las autoridades competentes las autorizaciones a las que haya lugar antes de suscribir y pagar las Acciones Ofrecidas.
+
+              </p>
+              <p class="!text-azul-80 my-5"><b>DÉCIMO SEGUNDO.</b> El Representante Legal expedirá y registrará en el libro de accionistas las acciones suscritas en la presente suscripción, siendo este último quien realizará las anotaciones de los suscriptores del mismo y llevará la teneduría del libro de registro de accionistas para emitir los títulos accionarios de las Acciones Ofrecidas suscritas y pagadas y de realizar las inscripciones que correspondan en el libro de registro de accionistas de la Sociedad. La expedición de certificados que legitimen el ejercicio de los derechos inherentes a la calidad de los accionistas, así como la negociación y/o afectación a los derechos que las acciones les reconocen, y demás asuntos relacionados con las acciones, se regirán por lo dispuesto en las normas vigentes y en los Estatutos Sociales de Asulado. Por medio del presente Reglamento se confiere al Representante Legal de la Sociedad amplias facultades para suscribir todas las comunicaciones relacionadas con la Oferta y las aceptaciones a la misma, así como para realizar todos los actos y trámites necesarios para materializar una y otras.
+
+              </p>
+              <p class="!text-azul-80 my-5"><b>DÉCIMO TERCERO</b>. Se deja constancia que el presente reglamento de suscripción de acciones se encuentra sujeto a la necesidad de obtener autorización por parte de la Superintendencia Financiera de Colombia, so pena de que la suscripción sea ineficaz.”
+                
+              </p>
+
+        
+          <p class="!text-azul-80 my-5">
+            <b>Acciones ofrecidas:</b> 3.067.362
+          </p>
+          <p class="!text-azul-80 my-5">
+            En caso de que decida aceptar la oferta y los demás accionistas la rechacen, podrá adquirir la totalidad de las acciones ofrecidas. Sin embargo, en caso de que varios accionistas concurran a la aceptación, las acciones se asignarán a prorrata de la participación que cada uno posea al momento de esta comunicación.
+          
+          </p>
+          <p class="!text-azul-80 my-5">
+            <b>Precio:</b>  $33.253,3273585595 cada una.
+          </p>
+
+          <p class="!text-azul-80 my-5">
+            <b>Plazo:</b> si está interesado en aceptar la oferta, tendrá quince (15) días hábiles contados a partir de esta comunicación. Para esto, deberá informar al representante legal de la Sociedad su decisión de aceptar la oferta, total o parcialmente. La notificación se recibirá en el correo secretariageneral@asulado.com.co.
+          </p>
+
+          <p class="!text-azul-80 my-5">
+            <b>Forma de pago:</b> el pago se efectuará mediante transferencia bancaria a la cuenta o cuentas indicadas por el oferente.
+          </p>
+
+          <p style="display: flow-root;"><img src="/assets/images/sebastian_mejia_firma.png" alt="" style="mix-blend-mode: darken;display: block;width: 100px;height: 31px;"></p>
+          <h3 class="!text-azul-80 mt-5">Sebastián Mejía Aramburo</h3>
+          <p class="!text-azul-80">
+            Representante legal<br />
+            Asulado Seguros de Vida S.A
+          </p>
+        </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="divider"></div>
+
 
         <div class="pl-10 py-6">
           <h3 class="!text-azul-bright !text-3xl">
