--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -140,7 +140,7 @@ Así mismo, los accionistas participes podrán ofertar un número mayor a la pro
       <div class="divider"></div>
 
 
-        <div class="pl-10 py-6">
+      <!-- <div class="pl-10 py-6">
           <h3 class="!text-azul-bright !text-3xl">
             Medellín, 6 de junio de 2024
           </h3>
@@ -220,7 +220,7 @@ Así mismo, los accionistas participes podrán ofertar un número mayor a la pro
         </div>
 
 
-        <div class="divider"></div>
+        <div class="divider"></div>-->
 
 
 
