--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -315,11 +315,34 @@
         }
       }
     }
+    &.btn_primary1 {
+      table {
+        @apply !w-full max-w-none;
+        .pbButtonb {
+          @apply w-full text-right;
+          input[type="submit"] {
+            @apply inline-block mr-auto grow-0 btn btn-primary !px-10;
+          }
+        }
+      }
+    }
+
     &.btn_secondary {
       table {
         @apply !w-full max-w-none;
         .pbButtonb {
           @apply w-full text-right;
+          input[type="submit"] {
+            @apply ml-auto grow-0 btn-secondary bg-alpha-20 btn-outline btn-sm inline-block hover:bg-azul-dark;
+          }
+        }
+      }
+    }
+    &.btn_secondary1 {
+      table {
+        @apply !w-full max-w-none;
+        .pbButtonb {
+          @apply w-full text-left;
           input[type="submit"] {
             @apply ml-auto grow-0 btn-secondary bg-alpha-20 btn-outline btn-sm inline-block hover:bg-azul-dark;
           }
@@ -408,7 +431,8 @@
       }
     }
   }
-  div[id="pg:fm:pb:archivos"] {
+  div[id="pg:fm:pb:archivos"],
+  div[id="pg:fm2:pb2:archivos"] {
     .data2Col.first {
       @apply w-full !block;
       input[type="radio"] {
@@ -434,6 +458,15 @@
     @apply h-[850px] w-full min-h-[850px];
   }
 }
+div[id="pg:fm:pb:voluntarias"] {
+  tr {
+    td.data2Col:has(input[type="hidden"]),
+    td.data2Col:has(span[style="display: none"]) {
+      @apply hidden;
+    }
+  }
+}
+
 .form-wrap {
   @apply flex flex-wrap;
   .form-control {
@@ -512,12 +545,11 @@
 }
 .tflex {
   @apply flex flex-wrap gap-0;
-  tr{
+  tr {
     @apply !block;
   }
   tr:first-child {
     @apply w-1/2;
-    
   }
   tr:nth-child(2) {
     @apply w-1/2;
